20100516 ui/widget/menu.c: supply a format to avoid warnings (Fred)
20100516 debugger/commandl.l: have a second go at eliminating warnings when
         calling debugger_command_input() on platforms where yy_size_t isn't an
         int in a way that works for platforms where it is (Fred)
20100519 disk/{beta.c,fdd.[ch],opus.c,plusd.c},machines/specplus3.c,
         settings.dat: extend 80 track drives to accept disks up to 84 tracks
         and 40 track drives to accept disks up to 42 tracks. Also add options
         to allow these limits to be overridden (fixes bug #3002653) (Gergely
         Szasz).
20100520 ChangeLog,README,configure.in,man/fuse.1: merge Release_0_10_0-branch
         changes from 0.10.0.2 onto trunk (Fred).
20100521 ChangeLog: remove duplicate entry (Fred).
20100522 sound.c: allow a little more treble in the TV Speaker mode (Fred).
20100527 sound/coreaudiosound.c: add some casts in output statements to avoid
         annoying warnings about format mismatches (Fred).
20100530 ChangeLog: remove another duplicate entry (Fred).
20100627 ui/gtk/gtkdisplay.c: ensure an appropriate scaler is selected when
         the Fuse window is resized by the user.
20100719 disk/disk.c: set track lengths when inserting a new disk (fixes bug
         #3031299) (Gergely Szasz).
20100819 disk/beta.c: correct writing of status and system regeisters to
         snapshots (Patrik Rak).
20100825 machine.c,machines/{Makefile.am,machines.h},tape.c: reintegrate
         NTSC Spectrum branch.
20100831 lib/[un]compressed/{disk_plus3.szx,tape_128.szx,tape_16.szx,
         tape_2048.szx,tape_2068.szx,tape_48.szx,tape_pentagon.szx,
         tape_plus2.szx,tape_plus2a.szx,tape_plus3.szx,tape_plus3e.szx,
         tape_scorpion.szx,tape_se.szx,tape_ts2068.szx}: swap A and F and A'
         and F' registers in autoload snapshots which were written when
         libspectrum still suffered from bug #2857419 (fixes bug #3040262)
         (thanks, Gergely Szasz) (Fred).